# rlenvscpp

./: .readthedocs.yaml  CMakeLists.txt  Doxyfile  README.md  config.h.in  graph_legend.html  index.html  md_README.html  pages.html
.github/workflows/: build.yml  build_docs.yml
doc/: CMakeLists.txt  conf.py.in
docs/: Makefile  conf.py  env_spec.html  examples.rst  genindex.html  how_to_use.rst  index.html  index.rst  installation.rst  overview.rst  readme.html  requirements.txt  search.html  searchindex.js  working_with_ray.rst  working_with_webots.rst
docs/_sources/: env_spec.md.txt
docs/examples/arduino/: arduino_usb.rst  arduino_wifi.rst
docs/examples/ray/: ray_example_1.rst  ray_example_2.rst
docs/html/: graph_legend.html  index.html  md_README.html  pages.html
docs/latex/: md_README.tex  refman.tex
docs/xml/: HTTPRequest_8hpp.xml  acrobot__env_8cpp.xml  acrobot__env_8h.xml  acrobot__vec__env_8cpp.xml  acrobot__vec__env_8h.xml  apiserver_8cpp.xml  apiserver_8h.xml  bicycle__vehicle__model__dynamics_8cpp.xml  bicycle__vehicle__model__dynamics_8h.xml  black__jack__env_8cpp.xml  black__jack__env_8h.xml  bounding__box__type_8h.xml  cart__pole__env_8cpp.xml  cart__pole__env_8h.xml  circle_8h.xml  classbasic__json.xml  classbyte__container__with__subtype.xml  classdetail_1_1binary__reader.xml  classdetail_1_1binary__writer.xml  classdetail_1_1exception.xml  classdetail_1_1file__input__adapter.xml  classdetail_1_1input__stream__adapter.xml  classdetail_1_1invalid__iterator.xml  classdetail_1_1iter__impl.xml  classdetail_1_1iteration__proxy.xml  classdetail_1_1iteration__proxy__value.xml  classdetail_1_1iterator__input__adapter.xml  classdetail_1_1json__ref.xml  classdetail_1_1json__reverse__iterator.xml  classdetail_1_1json__sax__acceptor.xml  classdetail_1_1json__sax__dom__callback__parser.xml  classdetail_1_1json__sax__dom__parser.xml  classdetail_1_1lexer.xml  classdetail_1_1lexer__base.xml  classdetail_1_1other__error.xml  classdetail_1_1out__of__range.xml  classdetail_1_1output__adapter.xml  classdetail_1_1output__stream__adapter.xml  classdetail_1_1output__string__adapter.xml  classdetail_1_1output__vector__adapter.xml  (+371 more)
examples/: CMakeLists.txt
examples/arduino/: CMakeLists.txt  arduino_example.cpp
examples/arduino_wifi/: CMakeLists.txt  arduino_wifi_example.cpp
examples/box2d/: CMakeLists.txt  box2d_example.cpp
examples/example_1/: CMakeLists.txt  example_1.cpp
examples/example_10/: CMakeLists.txt  example_10.cpp  plot.py
examples/example_11/: CMakeLists.txt
examples/example_12/: CMakeLists.txt  example_12.cpp
examples/example_13/: CMakeLists.txt  example_13.cpp
examples/example_2/: CMakeLists.txt
examples/example_3/: CMakeLists.txt
examples/example_4/: CMakeLists.txt
examples/example_5/: CMakeLists.txt  example_5.cpp
examples/example_6/: CMakeLists.txt
examples/example_7/: CMakeLists.txt
examples/example_8/: CMakeLists.txt
examples/example_9/: CMakeLists.txt
examples/ray/ray_example_1/: BUILD.bazel  CMakeLists.txt  ray_example_1.cpp  run.sh
examples/ray/ray_example_2/: BUILD.bazel  CMakeLists.txt  ray_example_2.cpp  run.sh
examples/webots/world_1/: CMakeLists.txt  world_1.cpp
examples/webots/world_1/controllers/e_puck_controller/: Makefile  e_puck_controller  e_puck_controller.cpp
examples/webots/world_1/worlds/: .world.wbproj  world.wbt
rest_api/: requirements.txt  rlenvs_rest_api_app.py
rest_api/gym_pybullet_drones_env/: quadrotor_sim_env_api.py
rest_api/gymnasium_envs/box2d/: lunar_lander_env_continuous_api.py  lunar_lander_env_discrete_api.py
rest_api/gymnasium_envs/classic_control/: acrobot_env_api.py  cart_pole_env_api.py  mountain_car_env_api.py  pendulum_env_api.py
rest_api/gymnasium_envs/classic_control/v/: acrobot_v_env_api.py
rest_api/gymnasium_envs/toy_text/: black_jack_env_api.py  cliffwalking_env_api.py  frozenlake_env_api.py  taxi_env_api.py
rest_api/results/: save-flight-05.25.2024_10.59.23.npy
src/rlenvs/: rlenvs_consts.h  rlenvs_types_v2.h  rlenvscpp_config.h  rlenvscpp_version.h
src/rlenvs/boards/arduino/: arduino_connector_base.h  arduino_connector_usb_base.cpp  arduino_connector_usb_base.h  arduino_connector_wifi_base.cpp  arduino_connector_wifi_base.h
src/rlenvs/dynamics/: bicycle_vehicle_model_dynamics.cpp  bicycle_vehicle_model_dynamics.h  diff_drive_dynamics.cpp  quadrotor_dynamics.cpp  quadrotor_dynamics.h
src/rlenvs/envs/: env_base.h  env_types.h  space_type.h  time_step_type.h
src/rlenvs/envs/api_server/: apiserver.cpp
src/rlenvs/envs/connect2/: connect2_env.h
src/rlenvs/envs/grid_world/: grid_world_env.cpp  grid_world_env.h
src/rlenvs/envs/gymnasium/: gymnasium_env_base.h
src/rlenvs/envs/gymnasium/box2d/: lunar_lander_env.cpp  lunar_lander_env.h
src/rlenvs/envs/gymnasium/classic_control/: acrobot_env.h  cart_pole_env.cpp  pendulum_env.h
src/rlenvs/envs/gymnasium/toy_text/: black_jack_env.h  frozen_lake_env.cpp  frozen_lake_env.h  taxi_env.cpp
src/rlenvs/envs/multi_armed_bandits/: multi_armed_banditis.cpp  multi_armed_bandits.h
src/rlenvs/envs/webots/: epuck_simple_grid_world.cpp  epuck_simple_grid_world.h  webots_base_env.h
src/rlenvs/envs/webots_envs/: epuck_simple_grid_world.cpp  epuck_simple_grid_world.h  webots_base_env.h
src/rlenvs/rigid_bodies/: body_rotation.cpp  body_rotation.h  body_translation.cpp  body_translation.h
src/rlenvs/rigid_bodies/webots_robots/: epuck_robot.cpp  epuck_robot.h
src/rlenvs/utils/: filtered_iterator.h  iteration_counter.h  iterative_algorithm_controller.cpp  iterative_algorithm_controller.h  iterative_algorithm_result.cpp  iterative_algorithm_result.h  math_utils.h  predicates.h  std_map_utils.h  unit_converter.h
src/rlenvs/utils/geometry/: generic_line.h
src/rlenvs/utils/geometry/mesh/: edge_element.cpp  mesh.h  (+24 more)
src/rlenvs/utils/io/: io_utils.h
src/rlenvs/utils/maths/: math_utils.h
tests/test_acrobot/: test_acrobot.cpp
tests/test_black_jack/: test_black_jack.cpp
tests/test_cart_pole/: test_cart_pole.cpp
tests/test_cliff_world/: test_cliff_world.cpp
tests/test_frozen_lake/: test_frozen_lake.cpp
(+9 files in other folders)
