
cc_binary(
    name = "ray_example_2",
    srcs = ["ray_example_2.cpp"],
    data = [
        "ray_example_2.so",
    ],
    linkstatic = True,
    deps = [
        ":ray_api",
    ],
)

cc_binary(
    name = "ray_example_2.so",
    srcs = glob([
        "ray_example_2.cpp",
    ]),
    linkopts = ["-shared"],
    linkstatic = True,
    deps = [
        ":ray_api",
    ],
)


cc_library(
    name = "ray_api",
    srcs = [
        "thirdparty/lib/libray_api.so",
    ],
    hdrs = glob([
        "thirdparty/include/**/*.h",
        "thirdparty/include/**/*.hpp",
    ]),
    linkopts = ["-Wl,-rpath,./"],
    strip_include_prefix = "thirdparty/include",
    visibility = ["//visibility:public"],
)
